--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <li><i class="bi bi-check-circle"></i> Fun, Friendly, and Fearless Tech Community.</li>
               <li><i class="bi bi-check-circle"></i> Curated Content to Spark Your Creativity.</li>
               <li><i class="bi bi-check-circle"></i> Open Doors for Every Tech Enthusiast.</li>
-              <p>Welcome to Luminity </p>
+              <p class="fst-italic"> Welcome to Luminity </p>
             </ul>
             <a href="#" class="read-more">Read More <i class="bi bi-long-arrow-right"></i></a>
           </div>
@@ -121,22 +121,22 @@
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Clients</p>
+            <span data-purecounter-start="0" data-purecounter-end="20+" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Members</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="1" class="purecounter"></span>
             <p>Projects</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="100+" data-purecounter-duration="1" class="purecounter"></span>
             <p>Hours Of Support</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
             <p>Hard Workers</p>
           </div>
 
