--- a/index.html
+++ b/index.html
@@ -580,6 +580,25 @@
             </div>
           </div>
 
+          
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
+            <div class="box">
+              <span class="advanced">Perfection</span>
+              <h3>Ultimate</h3>
+              <h4><sup>$</sup>49<span> / month</span></h4>
+              <ul>
+                <li>Everything in ORGANIZATION Tier</li>
+                <li>Luminity Credit (optional)</li>
+                <li>Priority Project</li>
+               
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Buy Now</a>
+              </div>
+            </div>
+          </div>
+
+
         </div>
 
       </div>
